hydro/_core.py


_lib.hydro_inlet_distribute_volume.argtypes = [
    c_double,
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    hydro_int,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
]
_lib.hydro_inlet_distribute_volume.restype = c_double

# ===================================================================
# sww.c
# ===================================================================

_lib.hydro_sww_create.argtypes = [c_char_p, c_void_p, c_double]
_lib.hydro_sww_create.restype = c_void_p

_lib.hydro_sww_store_timestep.argtypes = [c_void_p, c_void_p, c_double]
_lib.hydro_sww_store_timestep.restype = c_int

_lib.hydro_sww_close.argtypes = [c_void_p]
_lib.hydro_sww_close.restype = c_int

# ===================================================================
# geometry.c
# ===================================================================

_lib.hydro_polygon_area.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
]
_lib.hydro_polygon_area.restype = c_double

_lib.hydro_is_inside_triangle.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    c_int,
]
_lib.hydro_is_inside_triangle.restype = c_int

_lib.hydro_is_inside_polygon.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    hydro_int, c_int,
]
_lib.hydro_is_inside_polygon.restype = c_int

_lib.hydro_separate_points_by_polygon.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
    c_int,
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
]
_lib.hydro_separate_points_by_polygon.restype = hydro_int

_lib.hydro_polygon_aabb.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
    POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double),
]
_lib.hydro_polygon_aabb.restype = None

_lib.hydro_point_on_line.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    c_double, c_double,
]
_lib.hydro_point_on_line.restype = c_int

_lib.hydro_line_intersection.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
]
_lib.hydro_line_intersection.restype = c_int

# ===================================================================
# coordinate_transforms.c
# ===================================================================

_lib.hydro_geo_ref_init.argtypes = [c_void_p]
_lib.hydro_geo_ref_init.restype = None

_lib.hydro_geo_ref_set_utm.argtypes = [c_void_p, hydro_int, c_int]
_lib.hydro_geo_ref_set_utm.restype = None

_lib.hydro_geo_ref_get_epsg.argtypes = [c_void_p]
_lib.hydro_geo_ref_get_epsg.restype = c_int

_lib.hydro_geo_ref_to_absolute.argtypes = [
    c_void_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
]
_lib.hydro_geo_ref_to_absolute.restype = None

_lib.hydro_geo_ref_to_relative.argtypes = [
    c_void_p,
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
]
_lib.hydro_geo_ref_to_relative.restype = None

_lib.hydro_redfearn_latlon_to_utm.argtypes = [
    c_double, c_double,
    POINTER(hydro_int), POINTER(c_double), POINTER(c_double),
    c_double, c_double,
]
_lib.hydro_redfearn_latlon_to_utm.restype = None

_lib.hydro_redfearn_utm_to_latlon.argtypes = [
    hydro_int, c_double, c_double, c_int,
    POINTER(c_double), POINTER(c_double),
]
_lib.hydro_redfearn_utm_to_latlon.restype = None

_lib.hydro_dms_to_decimal_degrees.argtypes = [c_int, c_int, c_double]
_lib.hydro_dms_to_decimal_degrees.restype = c_double

_lib.hydro_decimal_degrees_to_dms.argtypes = [
    c_double, POINTER(c_int), POINTER(c_int), POINTER(c_double),
]
_lib.hydro_decimal_degrees_to_dms.restype = None

# ===================================================================
# fit_interpolate.c
# ===================================================================

_lib.hydro_find_containing_triangle.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    hydro_int, hydro_int,
]
_lib.hydro_find_containing_triangle.restype = c_void_p  # struct, not trivial

_lib.hydro_interpolate_at_point.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    hydro_int,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    c_double,
]
_lib.hydro_interpolate_at_point.restype = c_double

_lib.hydro_interpolate_batch.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.int64, flags="C_CONTIGUOUS"),
    hydro_int,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    hydro_int,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    c_double,
]
_lib.hydro_interpolate_batch.restype = None

_lib.hydro_interpolate_regular_grid.argtypes = [
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    ndpointer(np.float64, flags="C_CONTIGUOUS"), hydro_int,
    ndpointer(np.float64, flags="C_CONTIGUOUS"),
    c_int, c_double,
]
_lib.hydro_interpolate_regular_grid.restype = None

# ===================================================================
# timestepping.c
# ===================================================================

_lib.hydro_domain_evolve.argtypes = [c_void_p, c_double, c_double, c_char_p]
_lib.hydro_domain_evolve.restype = c_int

_lib.hydro_evolve_one_euler_step.argtypes = [c_void_p, c_double, c_double]
_lib.hydro_evolve_one_euler_step.restype = None

_lib.hydro_evolve_one_rk2_step.argtypes = [c_void_p, c_double, c_double]
_lib.hydro_evolve_one_rk2_step.restype = None

_lib.hydro_update_timestep.argtypes = [c_void_p, c_double, c_double]
_lib.hydro_update_timestep.restype = None


# ===================================================================
# Convenience wrappers for Python import
# ===================================================================

def hydro_polygon_area(polygon):
    """Compute polygon area. polygon: ndarray (N, 2) or flat."""
    p = np.asarray(polygon, dtype=np.float64).ravel()
    return _lib.hydro_polygon_area(p, len(p) // 2)


def hydro_is_inside_polygon(point, polygon, closed=True):
    p = np.asarray(point, dtype=np.float64).ravel()
    pg = np.asarray(polygon, dtype=np.float64).ravel()
    return bool(_lib.hydro_is_inside_polygon(p, pg, len(pg) // 2, int(closed)))


def hydro_is_inside_triangle(point, triangle, closed=True):
    p = np.asarray(point, dtype=np.float64).ravel()
    t = np.asarray(triangle, dtype=np.float64).ravel()
    return bool(_lib.hydro_is_inside_triangle(p, t, int(closed)))


def hydro_separate_points_by_polygon(points, polygon, closed=True):
    pts = np.asarray(points, dtype=np.float64).ravel()
    pg = np.asarray(polygon, dtype=np.float64).ravel()
    M = len(pts) // 2
    N = len(pg) // 2
    indices = np.empty(M, dtype=np.int64)
    count = _lib.hydro_separate_points_by_polygon(pts, M, pg, N, int(closed), indices)
    return indices, count


def hydro_point_on_line(point, line, rtol=1e-5, atol=1e-8):
    p = np.asarray(point, dtype=np.float64).ravel()
    l = np.asarray(line, dtype=np.float64).ravel()
    return bool(_lib.hydro_point_on_line(p, l, rtol, atol))


# ===================================================================
# Helper: wrap hydro_find_containing_triangle return struct
# ===================================================================

class InterpResult(ctypes.Structure):
    """Mirrors hydro_interp_result_t — search result from the C library."""
    _fields_ = [
        ("triangle_index", hydro_int),
        ("sigma", c_double * 3),
        ("vertices", hydro_int * 3),
    ]


def find_containing_triangle(point, vertex_coords, triangles, start_triangle=-1):
    """Python-friendly wrapper around hydro_find_containing_triangle.

    Returns a dict {triangle_index, sigma, vertices} or None if not found.
    """
    lib = _lib
    # The C function return type needs special handling — it returns by value.
    # We use ctypes to call it properly.
    lib.hydro_find_containing_triangle.restype = InterpResult
    result = lib.hydro_find_containing_triangle(
        point, vertex_coords, triangles,
        len(triangles) // 3, start_triangle,
    )
    if result.triangle_index < 0:
        return None
    return {
        "triangle_index": int(result.triangle_index),
        "sigma": [result.sigma[0], result.sigma[1], result.sigma[2]],
        "vertices": [int(result.vertices[0]), int(result.vertices[1]), int(result.vertices[2])],
    }
